<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Edit_Activity" android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="70dp" android:id="@+id/txtVName"
        android:textAppearance="@android:style/TextAppearance.Medium"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="70dp" android:id="@+id/txtVSurname"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:layout_below="@+id/txtVName" android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="70dp" android:id="@+id/txtVCell"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:layout_below="@+id/txtVSurname" android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="70dp" android:id="@+id/txtVEmail"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:layout_below="@+id/txtVCell" android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>
    <Button
        android:text="@string/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:id="@+id/btnSave" android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" android:layout_alignParentStart="true"/>
    <Button
        android:text="@string/btnDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:id="@+id/btnDelete" android:layout_above="@+id/btnSave"
        android:layout_alignParentLeft="true" android:layout_alignParentStart="true"/>
    <Button
        android:text="@string/btnEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:id="@+id/btnEdit" android:layout_above="@+id/btnDelete"
        android:layout_alignParentLeft="true" android:layout_alignParentStart="true"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/txtName"
        android:ems="10"
        android:layout_alignParentTop="true" android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" android:id="@+id/txtEDName" android:layout_above="@+id/txtVSurname"
        android:layout_alignParentRight="true" android:layout_alignParentEnd="true"
        android:textAppearance="@android:style/TextAppearance.Medium"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:text="@string/txtCell"
        android:ems="10"
        android:layout_below="@+id/txtVSurname" android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" android:id="@+id/txtEDCell" android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" android:layout_above="@+id/txtVEmail"
        android:textAppearance="@android:style/TextAppearance.Medium"/>
</RelativeLayout>
